--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend API for Marvelous app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./*.spec.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,9 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
